center text and correctly align

--- a/src/App.css
+++ b/src/App.css
@@ -32,8 +32,7 @@
   font-size: 1.75rem;
   line-height: 1.6;
   margin: 0;
-  max-width: 800px;
-  text-align: right;
+  text-align: center;
 }
 
 .signature {
@@ -42,10 +41,9 @@
   font-weight: 300;
   font-size: 1.2rem;
   margin: 0;
+  padding-top: 20px;
   opacity: 0.8;
   text-align: right;
-  max-width: 800px;
-  float: right;
 }
 
 @media (max-width: 768px) {
